--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         <script type="text/javascript">
             var fclient = new Faye.Client('/faye');
             var subscription = fclient.subscribe('/foo', function(message) {
-              alert(message)
+              alert(JSON.stringify(message));
             });
             
             var send_hello = function(message) {
