--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
+        <link href="css/iconic-bootstrap.css" rel="stylesheet" type="text/css">
+        <link href="css/iconic-glyphs.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -21,13 +23,33 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <!-- EMBER APPLICATION START -->
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script type="text/x-handlebars">
+          <div class="container">
+            <h2 class="iconic">Good CSV Loader</h2>
+
+            {{outlet}}
+          </script>
+        
+            <script type="text/x-handlebars" id="index">
+                {{status}}
+                <ul>
+                    {{#each item in content}}
+                        <li>{{item}}</li>
+                    {{/each}}
+                </ul>
+                <a class="iconic btn btn-sm" {{action 'requestUUID'}}> Start Session </a>
+            </script>
+        </div>
+
+        <!-- EMBER APPLICATION END -->
+
+
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="/faye/client.js"></script>
         <script type="text/javascript">
             var fclient = new Faye.Client('/faye');
@@ -39,13 +61,17 @@
               fclient.publish('/foo', {"message" : message || "hello"});
             };
         </script>
-
+        <script src="js/lib/iconic.min.js"></script>
+        <script src="js/lib/handlebars-1.1.2.js"></script>
+        <script src="js/lib/ember-1.5.0.js"></script>
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
+            e.src='https://www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X');ga('send','pageview');
         </script>
